--- a/SwiftUI Text Tools.xcodeproj/xcshareddata/xcschemes/Release SwiftUI Xcode Extension.xcscheme
+++ b/SwiftUI Text Tools.xcodeproj/xcshareddata/xcschemes/Release SwiftUI Xcode Extension.xcscheme
@@ -55,6 +55,10 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <PathRunnable
+         runnableDebuggingMode = "0"
+         FilePath = "/Applications/Xcode.app">
+      </PathRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -67,7 +71,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "/Volumes/Home/davec/Sources/Products/MyMeds/myMeds.xcodeproj"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
