--- a/SwiftUI Tools.xcodeproj/xcshareddata/xcschemes/Debug SwiftUI Xcode Extension.xcscheme
+++ b/SwiftUI Tools.xcodeproj/xcshareddata/xcschemes/Debug SwiftUI Xcode Extension.xcscheme
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1400"
+   wasCreatedForAppExtension = "YES"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +15,24 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "755527BF26C0282200A27C2C"
+               BuildableName = "SwiftUI Tools.appex"
+               BlueprintName = "SwiftUI Tools"
+               ReferencedContainer = "container:SwiftUI Tools.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "755527AA26C027CB00A27C2C"
-               BuildableName = "SwiftUI Text Tools.app"
-               BlueprintName = "SwiftUI Text Tools"
-               ReferencedContainer = "container:SwiftUI Text Tools.xcodeproj">
+               BuildableName = "SwiftUI Tools Installer.app"
+               BlueprintName = "SwiftUI Tools Installer"
+               ReferencedContainer = "container:SwiftUI Tools.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,39 +47,50 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <PathRunnable
+         runnableDebuggingMode = "0"
+         FilePath = "/Applications/Xcode12.app">
+      </PathRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "755527AA26C027CB00A27C2C"
-            BuildableName = "SwiftUI Text Tools.app"
-            BlueprintName = "SwiftUI Text Tools"
-            ReferencedContainer = "container:SwiftUI Text Tools.xcodeproj">
+            BuildableName = "SwiftUI Tools Installer.app"
+            BlueprintName = "SwiftUI Tools Installer"
+            ReferencedContainer = "container:SwiftUI Tools.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "/Volumes/Home/davec/Sources/Products/MyMeds/myMeds.xcodeproj"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "YES"
+      askForAppToLaunch = "Yes"
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "755527AA26C027CB00A27C2C"
-            BuildableName = "SwiftUI Text Tools.app"
-            BlueprintName = "SwiftUI Text Tools"
-            ReferencedContainer = "container:SwiftUI Text Tools.xcodeproj">
+            BuildableName = "SwiftUI Tools Installer.app"
+            BlueprintName = "SwiftUI Tools Installer"
+            ReferencedContainer = "container:SwiftUI Tools.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
